IF(FFTW_INCLUDE_DIR AND FFTW_LIBRARIES AND RFFTW_LIBRARIES)
	INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
	ADD_EXECUTABLE(smoke fluid2d.cc glutApplication.cc glutMaster.cc glutWindow.cc main.cc)
	TARGET_LINK_LIBRARIES(smoke touchlib tinyxml ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${OpenCV_LIBRARIES} ${FFTW_LIBRARIES} ${RFFTW_LIBRARIES})
ENDIF(FFTW_INCLUDE_DIR AND FFTW_LIBRARIES AND RFFTW_LIBRARIES)
